--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,9 @@ services:
     build: .
     env_file: .env
     volumes:
-      - type: volume # You could also bind-mount this to your local FS (see below)
+      - type: volume
         source: ark-data
         target: /app/ark/dedicated-server/ShooterGame/Saved
-        # - type: bind
-        # source: /home/ark/Saves
-        # target: /app/ark/data/Saves
     ports:
       - 27015:27015/udp
       - 27015:27015/tcp
