Put some serverconfig options back into flags.

--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -2,23 +2,44 @@
 AllowCaveBuildingPVE=True
 AllowHitMarkers=True
 AllowThirdPersonPlayer=True
+
 alwaysNotifyPlayerJoined=True
 alwaysNotifyPlayerLeft=True
+
 AutoSavePeriodMinutes=10.000000
+
+DayCycleSpeedScale=0.8
+DayTimeSpeedScale=0.8
+NightTimeSpeedScale=1.5
+
+PlayerDamageMultiplier=1.5
+StructureDamageMultiplier=1.5
+PlayerResistanceMultiplier=0.5
+PlayerCharacterHealthRecoveryMultiplier=1.5
+ResourcesRespawnPeriodMultiplier=1.2
+DinoCountMultiplier=0.7
+
 DifficultyOffset=0.1
+
 DisableDinoDecayPvE=True
 DisableStructureDecayPvE=True
-ItemStackSizeMultiplier=1.000000
-ListenServerTetherDistanceMultiplier=1.000000
-MaxTamedDinos=5000.000000
+
+ItemStackSizeMultiplier=2.0
+
+MaxTamedDinos=1000.0
+
 PreventDiseases=True
 PreventTribeAlliances=True
+
 RCONPort=27020
 RCONServerGameLogBuffer=600.000000
+
 ServerCrosshair=True
 serverPVE=True
+
 ShowMapPlayerLocation=True
-StructurePickupTimeAfterPlacement=60.000000
+
+StructurePickupTimeAfterPlacement=90.0
 
 [/Script/Engine.GameSession]
-MaxPlayers=70
+MaxPlayers=20
